fixed particles and removed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body, html {
   height: 100%;
   width: 100%;
   text-align: center;
+  overflow: hidden;
 }
 
 .align-items-center {
@@ -52,7 +53,7 @@ span {
 
 .crew {
   position: absolute;
-  margin-top: 7%;
+  top: 6%;
 }
 
 .crewgang a{
